--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^15.9.0",
     "dotenv": "^10.0.0",
     "joi": "^17.4.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.12",
     "nodemon": "^2.0.7",
     "socket.io": "^4.1.2",
