--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -r dotenv/config index.ts",
-    "test": "nyc mocha -r ts-node/register ./test/*.ts"
+    "test": "nyc mocha -r ts-node/register ./test/*.ts",
+    "start": "node build/index.js",
+    "build": "tsc",
+    "postinstall": "npm run build"
   },
   "author": "",
   "license": "ISC",
