--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "emitDecoratorMetadata" : true,
         "experimentalDecorators" : true,
         "allowJs": true,
-        "target": "es5"
+        "target": "es5",
+        "outDir": "build"
     }
 }
